Altered command for importing image to check if image uploaded.

--- a/Replication_notebook.ipynb
+++ b/Replication_notebook.ipynb
@@ -177,6 +177,7 @@
     "\n",
     "\n",
     "![ERROR:Here should be causal graph 2](files/causal_graph_1.png)\n",
+    "<img src=\"files/causal_graph_1.png\" width=\"800\" />\n",
     "\n",
     "\n",
     "\n",
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7cbb3d5b-c782-4bfe-9dd1-b75ad485401b",
    "metadata": {},
    "outputs": [
@@ -282,7 +283,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
