--- a/Replication_notebook.ipynb
+++ b/Replication_notebook.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e895978a-c212-471c-9448-75ab310ecc87",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e36b5216-c5e2-4857-9234-ffbe26ca0469",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "65ae3f81-3d58-487f-87fd-4b5db2af3662",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "6cb8a6a0-d65e-4ec3-b60a-008381097056",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cc0b1668-0a07-40ae-bc82-3e390d6e87b7",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29bc2e2d-cabf-425f-98c3-f16749700916",
+   "id": "e7bd3cba",
    "metadata": {},
    "source": [
     "Muralidharan, K., & Prakash, N. (2017) study student enrollment or completion of grade 9 (the first year of secondary school) as an outcome variable by constructing a triple difference estimate (DDD). The first difference is estimated across girls aged 14 or 15 in Bihar ('treated' cohort) and girls aged 16 and 17 ('untreated'/'control' cohort). The presence of several factors related to the enhancement of school enrollment in Bihar at the same time as the Cycle Program, namely increasing household incomes and increased public investment in education, results in a confounded estimate. For this reason, the authors use boys as a control group, as they would be exposed to external factors that affect school enrollment during the period of interest but were not eligible for the program. However, since girls’ enrollment was already quite low, it is impossible to measure whether the growth of their enrollment was faster than boys. Parallel trends in boys' and girls' enrollment growth were tested four years before the program  (2002–2003 to 2005–2006) using official enrollment, rejecting the null hypothesis of parallel trends as shown in (Table 1, panel A).\n",
@@ -176,8 +176,7 @@
     "\n",
     "\n",
     "\n",
-    "<img src=\"files/causal_graph_1.png\" width=\"800\" />\n",
-    "\n",
+    "![ERROR:Here should be causal graph 1](files/causal_graph_1.png)\n",
     "\n",
     "\n",
     " \n",
