--- a/Replication_notebook.ipynb
+++ b/Replication_notebook.ipynb
@@ -176,7 +176,7 @@
     "\n",
     "\n",
     "\n",
-    "![ERROR:Here should be causal graph 1](files/causal_graph_1.png)\n",
+    "![ERROR:Here should be causal graph 1](files\causal_graph_1.png)\n",
     "\n",
     "\n",
     " \n",
